# ExtraControl

./: WindowsService.py  command.py  install.txt  service.py  setup.txt  tools.py
build_scripts/freebsd/: build.sh  postinstall.freebsd  preremove.freebsd  rc.serclient  serclient.boot.pfsense
build_scripts/linux/: build.sh  centos-serclient.init  debian-serclient.init  endian-serclient.startup  install.sh  postinstall.debian  postinstall.ubuntu  preremove.debian  preremove.ubuntu  serclient.spec  ubuntu-serclient.upstart
build_scripts/windows/: build.bat  serclient.spec  setup_full.iss  setup_update.iss  warnserclient.txt
cpp/: CMakeLists.txt  README.txt  WindowsService.cpp  commandline.hpp  commandobserver.cpp  commandobserver.hpp  commandrequest.cpp  commandrequest.hpp  launchprocess.hpp  logging.hpp  main.cpp  module.cpp  module.hpp  moduleio.cpp  packet.cpp  packet.hpp  packetio.cpp  serialwatcher.cpp  serialwatcher.hpp  sized_integers.hpp  tools.cpp  tools.hpp
cpp/devtools/: logger.cpp  logger.h  logger_file.cpp  logger_file.h  logger_syslog.cpp  logger_syslog.h
cpp/linux/: launchprocess.cpp
cpp/plugins/: CMakeLists.txt  exec.cpp  osinfo.cpp  osinfo.hpp  remove.cpp  systemstatus.cpp  systemstatus.hpp  timestring.cpp  timestring.hpp
cpp/plugins/freebsd/: osinfo_impl.cpp
cpp/plugins/linux/: osinfo_impl.cpp
cpp/plugins/windows/: osinfo_impl.cpp
cpp/utils/: beginend.hpp  canreadfile.cpp  canreadfile.hpp  count.hpp  local_buffer.hpp  split.cpp  split.hpp  tostring.hpp
cpp/utils/linux/: launchprocess.cpp
cpp/utils/windows/: launchprocess.cpp
installer/centos/: aruba-serclient-0.01-1.noarch.rpm
installer/debian/: aruba-serclient_0.01-1_all.deb  aruba-serclient_0.01-1_all2.deb
installer/endian/: aruba-serclient-0.01-1.noarch.rpm
installer/freenas/: aruba-serclient-0.01.tbz
installer/pfsense/: aruba-serclient-0.01.tbz
installer/ubuntu/: aruba-serclient_0.01-1_all.deb  aruba-serclient_0.01-1_allweb.deb
internals/: modulemng.py  restart.py
plugins/: exec.py  netconf.py  osinfo.py  remove.py  systemstatus.py  updateModule.py  updateSoftware.py  upload.py
test/: README.txt
test/config/: config.ini
test/config/keys/: aruba  aruba.pub
test/setup/windows/: windows-setup.bat
test/tests/: __main__.py
test/tests/case/: execute.py  module_lifecycle.py  modulemng.py  netconf.py  osinfo.py  remove.py  sanity.py  systemstatus.py  updatemodule.py  upload.py
test/tests/files/: __init__.py
test/tests/files/linux/: thisisanothertest  thisisatest  xmlecho
test/tests/files/module/: xmlecho
test/tests/files/windows/: thisisanothertest.bat  thisisatest.bat  xmlecho.bat
test/tests/utils/: __init__.py  configuration.py  main.py  misc.py  platform.py  win32.py
